fixup: Align upload button edge with upload dropzone edge

--- a/labware-library/src/labware-creator/components/importLabware.css
+++ b/labware-library/src/labware-creator/components/importLabware.css
@@ -17,7 +17,7 @@
 
 .upload_button {
   display: block;
-  width: 18rem;
+  width: 17.5rem;
 }
 
 .file_drop {
